# rental-damage-detection

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d2efd85930d0_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  assets.py  auth.py  findings.py  inspections.py  metrics.py  photos.py  rental_sessions.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/ml/: claude_client.py  few_shot_engine.py  metrics_tracker.py
backend/app/models/: __init__.py  asset.py  base.py  feedback.py  finding.py  inspection.py  model_metrics.py  photo.py  rental_session.py  repair_cost.py  tenant.py  user.py
backend/app/schemas/: asset.py  auth.py  common.py  feedback.py  finding.py  inspection.py  metrics.py  photo.py  rental_session.py
backend/app/services/: damage_detection.py  feedback_processor.py  image_validator.py  prompt_builder.py  repair_cost_service.py  storage_service.py
backend/app/workers/: detection_worker.py
backend/tests/: conftest.py
backend/tests/test_api/: test_assets.py
backend/tests/test_ml/: test_few_shot_engine.py
backend/tests/test_services/: test_damage_detection.py  test_image_validator.py
docs/: AI_PIPELINE.md  API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+25 files in other folders)
